<resources>
    <string name="app_name">ToDo list</string>
    <string name="next"><u>next</u></string>
    <string name="logout"><u>Logout</u></string>
    <string name="welcome_back">Welcome back!</string>
    <string name="your_email_address">your email address</string>
    <string name="password">password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="things_todo">Things ToDo</string>
    <string name="delete">Delete</string>
    <string name="create_new_task_here">create new task here</string>
    <string name="lists_todo">Lists ToDo</string>
    <string name="lists">Lists :</string>
    <string name="create_new_list_here">create new list here</string>
    <string name="create_new_list">Create new List</string>
    <string name="enter_list_title">Enter list title</string>
    <string name="reate_new_list">Create new list</string>
    <string name="view_task">View Task</string>
    <string name="add">Add</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="Things_todo">Things ToDo</string>
    <string name="Search">search</string>
    <string name="results">Results :</string>
    <string name="create_your_profile_nto_start_your_first_ntodo_list">Create your profile\nto start your first\nToDo List</string>
    <string name="your_name">uasername</string>
    <string name="Password">password</string>
    <string name="Your_email_address">your email address</string>
    <string name="Create_your_profile">Create your profile</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="Log_in">Log in</string>
    <string name="Diew_task">View Task</string>
    <string name="edit">Edit</string>
    <string name="_30_Dec_00">30_Dec_00</string>
    <string name="Description">Description</string>
    <string name="interaction">Also need to ask for advice on these</string>
    <string name="Delete">Delete</string>
</resources>