<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_profile_nto_start_your_first_ntodo_list"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="24dp"
        android:layout_gravity="center"
        android:layout_marginTop="52dp" />

    <EditText
        android:id="@+id/et_Username"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:background="#8c5bdf"
        android:hint="@string/your_name"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColorHint="#fff" />

    <EditText
        android:textColor="#fff"
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="#8c5bdf"
        android:textColorHint="#fff"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp" />

    <EditText
        android:textColor="#fff"
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_address"
        android:inputType="textEmailAddress"
        android:background="#8c5bdf"
        android:textColorHint="#fff"
        android:paddingStart="16dp"

        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp" />

    <Button
        android:id="@+id/btn_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/shape"
        android:text="@string/create_your_profile"
        android:textColor="#fff" />

    <TextView
        android:textColor="#BCB8B8"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account" />

    <TextView
        android:id="@+id/txt_tv_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:textSize="30sp"
         />

</LinearLayout>