<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    tools:context=".ListActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_Back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/things_todo"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp" />



    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="16dp"
        android:inputType="textEmailAddress"
        android:background="#8c5bdf"
        android:textColorHint="#fff"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="36dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_List_Title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_Delete_List"
            android:textColor="#BCB8B8"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_Cr_New_Task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task_here"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="16dp"
        android:background="#8c5bdf"
        android:textColor="#fff"
        android:gravity="start|center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:layout_marginTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/li_todo" />


</LinearLayout>